# epl-prediction-lab

./: .env.example  .gitignore  CLAUDE.md  PROGRESS.md  README.md  docker-compose.yml  plan-new.md  plan.md
backend/: .gitignore  Dockerfile  pyproject.toml
backend/app/: indexnow.py  leagues.py  main.py  queries.py  schemas.py
backend/scripts/: backfill_fixture_ids.py  backfill_referees.py  backtest.py  backtest_block21.py  calibrate_rho.py  calibrate_rho_per_quarter.py  compare_configs.py  finalise_missed_matches.py  fit_temperature.py  fit_temperature_per_league.py  gen_x_thread.py  generate_recaps.py  generate_stories.py  generate_team_narratives.py  generate_weekly_blog.py  grid_search.py  ingest_apifootball_odds.py  ingest_bookmaker_odds.py  ingest_closing_odds.py  ingest_european_cups.py  ingest_full_squad_photos.py  ingest_injuries.py  ingest_lineups.py  ingest_live_odds.py  ingest_live_scores.py  ingest_news.py  ingest_odds.py  ingest_player_photos.py  ingest_players.py  ingest_season.py  ingest_weather.py  ops_alert.py  ops_watchdog.py  post_email_digest.py  post_manager_of_month.py  post_matchday_morning.py  post_reddit_weekly.py  post_team_of_week.py  post_telegram.py  post_telegram_digest.py  (+15 more)
backend/tests/: test_arbitrage.py  test_bankroll.py  test_calibration.py  test_chat_prompt.py  test_clv.py  test_commitment.py  test_confidence_interval.py  test_defense_adjusted_xg.py  test_derbies.py  test_elo.py  test_ensemble.py  test_fatigue.py  test_features.py  test_ft_recap_trigger.py  test_half_time.py  test_ingest.py  test_lineup_strength.py  test_markets.py  (+14 more)
(+375 files in other folders)
